fixed auto cropping and presentation of buttons and images for profile image

--- a/src/styles/loginRegister.scss
+++ b/src/styles/loginRegister.scss
@@ -36,13 +36,24 @@
         }
     }
 
-    .cloudinary-button {
-        all:unset;
-        text-decoration: underline;
-        cursor: pointer;
-        font-size: 1rem;
-        font-weight: 300;
-        padding: 10px 0px;
-    }
     
+}
+
+.cloudinary-button {
+    all:unset;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 300;
+    padding: 10px 0px;
+}
+
+.cloudinary-button:hover {
+    all:unset;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 300;
+    padding: 10px 0px;
+    color: red;
 }
